apps/web/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden

    spec:
      containers:
      - name: vaultwarden
        # https://hub.docker.com/r/vaultwarden/server/tags
        image: vaultwarden/server:1.31.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /data
      volumes:
      - name: config
        hostPath:
          path: /lxc-configs/vaultwarden-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
